--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "author": "LitenApe",
   "license": "MIT",
   "description": "React Component Library for personal use",
-  "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
@@ -40,7 +39,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
-    "babel-loader": "^8.0.6",
-    "ts-loader": "^6.0.4"
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "@types/storybook__addon-info": "^4.1.2",
+    "@types/storybook__addon-knobs": "^5.0.3",
+    "@types/storybook__react": "^4.0.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6"
   }
 }
