--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6",
-    "react-docgen-typescript-loader": "^3.2.0"
+    "babel-loader": "^8.0.6"
   }
 }
