--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:story": "start-storybook -p 6006",
     "build": "react-scripts build",
+    "build:storybook": "build-storybook",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +49,7 @@
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "node-sass": "^4.12.0"
   }
 }
