--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react-dom": "16.9.0",
+    "@storybook/react": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addon-actions": "^5.1.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -15,13 +21,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:story": "start-storybook -p 6006",
+    "start:storybook": "start-storybook -p 6006",
     "build": "react-scripts build",
     "build:storybook": "build-storybook",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'"
+    "lint": "eslint './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'"
   },
   "husky": {
     "hooks": {
@@ -45,12 +51,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
     "@types/react": "^16.9.2",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.3",
