--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "3.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:storybook",
     "start:storybook": "start-storybook -p 6006",
     "build": "react-scripts build",
     "build:storybook": "build-storybook",
