chore: Add a11y and update dependencies

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "license": "MIT",
   "description": "React Component Library for personal use",
   "dependencies": {
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-info": "^5.2.1",
+    "@storybook/addon-knobs": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react-dom": "16.9.0",
-    "@storybook/react": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addon-actions": "^5.1.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -51,20 +51,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@storybook/addon-a11y": "^5.2.1",
     "@types/react": "^16.9.2",
     "@types/storybook__addon-info": "^4.1.2",
-    "@types/storybook__addon-knobs": "^5.0.3",
+    "@types/storybook__addon-knobs": "^5.0.4",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^2.1.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb-typescript": "^4.0.1",
-    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.5",
     "node-sass": "^4.12.0",
