--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.5",
     "node-sass": "^4.12.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-test-renderer": "^16.10.1"
   }
 }
