--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/core": "^7.6.0",
     "@storybook/addon-a11y": "^5.2.1",
     "@types/react": "^16.9.2",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.4",
     "@types/storybook__react": "^4.0.2",
