--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.4",
-    "@types/react-dom": "16.9.0",
+    "cookednames": "^1.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -52,7 +50,10 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@storybook/addon-a11y": "^5.2.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.4",
     "@types/react": "^16.9.2",
+    "@types/react-dom": "16.9.0",
     "@types/react-test-renderer": "^16.9.0",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.4",
