--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix"
+      "pre-push": "npm run lint"
     }
   },
   "eslintConfig": {
