--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
-    "cookednames": "^1.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "cookednames": "^1.1.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2"
   },
@@ -22,7 +22,7 @@
     "start:storybook": "start-storybook -p 6006",
     "build": "react-scripts build",
     "build:storybook": "build-storybook",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'"
@@ -48,30 +48,34 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.6.2",
     "@storybook/addon-a11y": "^5.2.1",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.9.5",
     "@types/react-dom": "16.9.0",
     "@types/react-test-renderer": "^16.9.0",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.4",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript": "^4.0.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "husky": "^3.0.5",
+    "eslint-plugin-react": "^7.16.0",
+    "husky": "^3.0.8",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.10.1"
+    "react-test-renderer": "^16.10.2"
   }
 }
