--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "react-scripts build",
     "build:storybook": "build-storybook",
     "test": "react-scripts test --watchAll=false",
+    "test:update": "react-scripts test --watchAll=false --updateSnapshot",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix './src/**/*.{ts,tsx}' './stories/**/*.{ts,tsx}'"
