--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,10 @@
       "mode": "strict"  
     }],
     "rest-spread-spacing": ["error", "never"],
-    "@typescript-eslint/explicit-function-return-type": ["off", "allowExpressions"]
+    "@typescript-eslint/explicit-function-return-type": ["error", {
+      "allowExpressions": true
+    }],
+    "no-plusplus": "off"
   },
   "settings": {
     "react": {
