feat: Accecssibility improvements for radio

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
     "@typescript-eslint/explicit-function-return-type": ["error", {
       "allowExpressions": true
     }],
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "jsx-a11y/label-has-for": "off"
   },
   "settings": {
     "react": {
