--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -22,6 +22,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "stories/**/*"],
+  "include": ["src/**/*", ".storybook/stories/**/*"],
   "exclude": ["node_modules", "build", "scripts"]
 }
