--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,13 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
-    "comma-dangle": ["error", "always"],
+    "comma-dangle": ["error", {
+      "arrays": "never",
+      "objects": "always",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never"
+    }],
     "quotes": ["error", "double"],
     "object-curly-spacing": ["error", "always"],
     "curly": ["error", "all"],
