--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@storybook/addons": "^5.2.3",
     "@storybook/react": "^5.2.3",
     "cookednames": "^1.1.3",
+    "dirty-kitchen": "0.0.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.1.1",
