--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
       "allowExpressions": true
     }],
     "no-plusplus": "off",
-    "jsx-a11y/label-has-for": "off"
+    "jsx-a11y/label-has-for": "off",
+    "no-shadow": "off"
   },
   "settings": {
     "react": {
