refactor: One component per file
The code was initially written as huge files in the beginning due to a limitation of react-test-script setting the isolatedModules flag to true by default. The whole codebase is now restructured to respect the choice, while still being able to isolate components into their respective files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,10 @@
     }],
     "no-plusplus": "off",
     "jsx-a11y/label-has-for": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "import/no-cycle": "off",
+    "import/no-self-import": "error",
+    "no-duplicate-imports": "error"
   },
   "settings": {
     "react": {
