fix: UniqueId as key causes more rerendering than necessary

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,8 @@
     "no-shadow": "off",
     "import/no-cycle": "off",
     "import/no-self-import": "error",
-    "no-duplicate-imports": "error"
+    "no-duplicate-imports": "error",
+    "react/no-array-index-key": "off"
   },
   "settings": {
     "react": {
