--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+*/**/node_modules
 /.pnp
 .pnp.js
+*/**/package-lock.json
 
 # testing
 /coverage
 
 # production
+*/**/dist
 /build
 /storybook-static
 
@@ -22,5 +25,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log
 
 react-app-env.d.ts
