--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,25 +5,25 @@
     "alwaysStrict": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
     "jsx": "react",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
+    "noEmit": false,
+    "noImplicitAny": true,
+    "outDir": "./dist/",
     "pretty": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "sourceMap": false,
     "strict": true,
-    "target": "es5",
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true
+    "target": "es5"
   },
   "include": [
     "src",
     ".storybook/stories"
-  ]
+  ],
+  "exclude": ["webpack.config.js", "./**/__tests__"]
 }
