--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,15 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    needs: 'tests'
 
     steps:
       - uses: actions/checkout@v2
@@ -26,9 +19,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Run tests with coverage
-        run: npm run test -- --watchAll=false --coverage
 
       - name: Build Storybook
         run: npm run build-storybook
