--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,33 @@
-name: Deploy
+name: CI
 
 on:
   push:
+    branches: [main]
+  pull_request:
     branches: [main]
 
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests with coverage
+        run: npm run test -- --watchAll=false --coverage
+
+  deploy:
     runs-on: ubuntu-latest
     needs: 'tests'
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v2
